fix: error from test